overlays/dev/flask-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "flask-backend-ingress"
  namespace: default
  labels:
    env: dev
spec:
  rules:
    - http:
        paths:
          - path: /new-path
            pathType: Prefix
            backend:
              service:
                name: "demo-flask-backend"
                port:
                  number: 80
